--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.google.http-client:google-http-client-android:1.23.0'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
     compile project(path: ':javajokes')
+    compile project(path: ':jokeactivity')
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
