Deployed app to App Engine

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,12 +35,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    endpointsServer project(path: ':backend', configuration: 'endpoints')
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.google.android.gms:play-services-ads:11.8.0'
-    compile 'com.google.api-client:google-api-client:1.23.0'
-    compile 'com.google.http-client:google-http-client-android:1.23.0'
-    compile 'com.google.code.findbugs:jsr305:2.0.1'
     compile project(path: ':javajokes')
     compile project(path: ':jokeactivity')
 
@@ -48,5 +42,12 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.google.android.gms:play-services-ads:11.8.0'
+    compile 'com.google.api-client:google-api-client:1.23.0'
+    compile 'com.google.http-client:google-http-client-android:1.23.0'
+    compile 'com.google.code.findbugs:jsr305:3.0.1'
     testCompile 'junit:junit:4.12'
+    androidTestCompile 'com.google.code.findbugs:jsr305:3.0.1'
+    compile project(path: ':backend', configuration: 'android-endpoints')
 }
