--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,8 @@ dependencies {
     compile 'com.google.code.findbugs:jsr305:3.0.1'
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.google.code.findbugs:jsr305:3.0.1'
+    androidTestCompile ('com.android.support.test:rules:0.4', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
     compile project(path: ':backend', configuration: 'android-endpoints')
 }
