--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile 'com.google.http-client:google-http-client-android:1.23.0'
     compile 'com.google.code.findbugs:jsr305:3.0.1'
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:2.7.22'
     androidTestCompile 'com.google.code.findbugs:jsr305:3.0.1'
     androidTestCompile ('com.android.support.test:rules:0.4', {
         exclude group: 'com.android.support', module: 'support-annotations'
