--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+        paid {
+            applicationIdSuffix ".paid"
+        }
+        free {
+            applicationIdSuffix ".free"
+        }
+    }
 }
 
 dependencies {
