--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     })
 
     compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.google.android.gms:play-services-ads:11.8.0'
+    freeCompile 'com.google.android.gms:play-services-ads:11.8.0'
     compile 'com.google.api-client:google-api-client:1.23.0'
     compile 'com.google.http-client:google-http-client-android:1.23.0'
     compile 'com.google.code.findbugs:jsr305:3.0.1'
@@ -62,4 +62,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile project(path: ':backend', configuration: 'android-endpoints')
+    testCompile ('com.android.support.test:rules:0.4', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
 }
